--- a/templates/nodes/client.yaml
+++ b/templates/nodes/client.yaml
@@ -10,6 +10,11 @@ Metadata:
       - ParentVPCStack
       - SecurityStackName
       - ParentAlertStack
+      - ParentS3StackAccessLog
+    - Label:
+        default: 'Alb Parameters'
+      Parameters:
+      - NodesELBScheme
     - Label:
         default: 'EC2 Parameters'
       Parameters:
@@ -33,14 +38,25 @@ Parameters:
     Description: Name of an active CloudFormation stack that contains the networking
       resources.
     Type: String
-  SecurityStackName:
-    Description: Name of an active CloudFormation stack that contains the security
-      resources.
-    Type: String
   ParentAlertStack:
     Description: 'Optional but recommended stack name of parent alert stack based on operations/alert.yaml template.'
     Type: String
     Default: ''
+  ParentS3StackAccessLog:
+    Description: 'Optional stack name of parent s3 stack based on state/s3.yaml template (with Access set to ElbAccessLogWrite) to store access logs.'
+    Type: String
+    Default: ''
+  SecurityStackName:
+    Description: Name of an active CloudFormation stack that contains the security
+      resources.
+    Type: String
+  NodesELBScheme:
+    Description: 'Indicates whether the load balancer in front of the ES clients is Internet-facing or internal.'
+    Type: String
+    Default: 'internet-facing'
+    AllowedValues:
+    - 'internet-facing'
+    - internal
   NodeEnableMetrics:
     Description: 'Should the node have Group Metrics collection enabled?'
     Type: String
@@ -403,11 +419,13 @@ Mappings:
 
 Conditions:
   HasPermissionsBoundary: !Not [!Equals [!Ref PermissionsBoundary, '']]
+  HasS3Bucket: !Not [!Equals [!Ref ParentS3StackAccessLog, '']]
   HasIAMUserSSHAccess: !Equals [!Ref IAMUserSSHAccess, 'true']
   HasRestoreImageId: !Not [!Equals [!Ref RestoreImageId, '']]
   HasManagedPolicyArns: !Not [!Equals [!Ref ManagedPolicyArns, '']]
   HasAlertTopic: !Not [!Equals [!Ref ParentAlertStack, '']]
   HasNodeMetrics: !Equals [!Ref NodeEnableMetrics, "true"]
+  HasNodesELBSchemeInternal: !Equals [!Ref NodesELBScheme, 'internal']
 
 Resources:
   Logs:
@@ -970,6 +988,39 @@ Resources:
         - ScheduledActions
         WaitOnResourceSignals: true
 
+  NodesALB:
+    Type: 'AWS::ElasticLoadBalancingV2::LoadBalancer'
+    Properties:
+      LoadBalancerAttributes:
+      - Key: 'idle_timeout.timeout_seconds'
+        Value: !Ref NodesLoadBalancerIdleTimeout
+      - Key: 'routing.http2.enabled'
+        Value: 'true'
+      - Key: 'access_logs.s3.enabled'
+        Value: !If [HasS3Bucket, 'true', 'false']
+      - !If [HasS3Bucket, {Key: 'access_logs.s3.prefix', Value: !Ref 'AWS::StackName'}, !Ref 'AWS::NoValue']
+      - !If [HasS3Bucket, {Key: 'access_logs.s3.bucket', Value: {'Fn::ImportValue': !Sub '${ParentS3StackAccessLog}-BucketName'}}, !Ref 'AWS::NoValue']
+      Scheme: !Ref NodesELBScheme
+      SecurityGroups:
+      - !Ref NodesALBSG
+      Subnets: !If
+      - HasNodesELBSchemeInternal
+      - - {'Fn::ImportValue': !Sub '${ParentVPCStack}-SubnetAPrivate'}
+        - {'Fn::ImportValue': !Sub '${ParentVPCStack}-SubnetBPrivate'}
+        - {'Fn::ImportValue': !Sub '${ParentVPCStack}-SubnetCPrivate'}
+      - - {'Fn::ImportValue': !Sub '${ParentVPCStack}-SubnetAPublic'}
+        - {'Fn::ImportValue': !Sub '${ParentVPCStack}-SubnetBPublic'}
+        - {'Fn::ImportValue': !Sub '${ParentVPCStack}-SubnetCPublic'}
+      Tags:
+      - Key: Name
+        Value:
+          Fn::Join:
+          - ''
+          - - Fn::ImportValue:
+                Fn::Sub: "${ParentVPCStack}-EnvTag"
+            - "-od4es-alb"
+
+  # Alarms
   CPUTooHighAlarm:
     Condition: HasAlertTopic
     Type: 'AWS::CloudWatch::Alarm'
