--- a/templates/nodes/client.yaml
+++ b/templates/nodes/client.yaml
@@ -25,14 +25,15 @@ Metadata:
     - Label:
         default: 'Node Parameters'
       Parameters:
+      - AmazonLinux2Version
       - InstanceType
       - LogsRetentionInDays
-      - VolumeSize
-      - RestoreImageId
-      - AmazonLinux2Version
-      - UserData
-      - NodeSubnetsReach
       - NodeEnableMetrics
+      - NodesLoadBalancerIdleTimeout
+      - NodeSubnetsReach
+      - RestoreImageId
+      - UserData
+      - VolumeSize
 Parameters:
   ParentVPCStack:
     Description: Name of an active CloudFormation stack that contains the networking
@@ -62,6 +63,12 @@ Parameters:
     Type: String
     Default: "true"
     AllowedValues: ["true", "false"]
+  NodesLoadBalancerIdleTimeout:
+    Description: 'The idle timeout value, in seconds.'
+    Type: Number
+    Default: 60
+    MinValue: 1
+    MaxValue: 4000
   KeyName:
     Description: The EC2 Key Pair to allow SSH access to all the instances for this
       solution
@@ -124,7 +131,9 @@ Parameters:
     Type: String
     AllowedPattern: "^(\\d{1,2})"
     Default: '3'
-
+  CertificateArn:
+    Description: 'SSL certificate arn'
+    Type: String
 Mappings:
   VersionMap:
     '20200917.0':
@@ -1002,7 +1011,8 @@ Resources:
       - !If [HasS3Bucket, {Key: 'access_logs.s3.bucket', Value: {'Fn::ImportValue': !Sub '${ParentS3StackAccessLog}-BucketName'}}, !Ref 'AWS::NoValue']
       Scheme: !Ref NodesELBScheme
       SecurityGroups:
-      - !Ref NodesALBSG
+      - Fn::ImportValue:
+          Fn::Sub: "${SecurityStackName}-NodesSecurityGroup"
       Subnets: !If
       - HasNodesELBSchemeInternal
       - - {'Fn::ImportValue': !Sub '${ParentVPCStack}-SubnetAPrivate'}
@@ -1019,6 +1029,62 @@ Resources:
           - - Fn::ImportValue:
                 Fn::Sub: "${ParentVPCStack}-EnvTag"
             - "-od4es-alb"
+
+  NodesELBTargetGroup: # not monitored, but MasterELB is monitored!
+    Type: 'AWS::ElasticLoadBalancingV2::TargetGroup'
+    Properties:
+      HealthCheckIntervalSeconds: 30
+      HealthCheckPath: '/app/login'
+      HealthCheckPort: '5601'
+      HealthCheckProtocol: HTTP
+      HealthCheckTimeoutSeconds: 25
+      HealthyThresholdCount: 2
+      UnhealthyThresholdCount: 2
+      Matcher:
+        HttpCode: '200-299'
+      Port: 5601
+      Protocol: HTTP
+      Tags:
+      - Key: Name
+        Value:
+          Fn::Join:
+          - ''
+          - - Fn::ImportValue:
+                Fn::Sub: "${ParentVPCStack}-EnvTag"
+            - "-od4es-target-group"
+      VpcId: {'Fn::ImportValue': !Sub '${ParentVPCStack}-VPC'}
+      TargetGroupAttributes:
+      - Key: 'deregistration_delay.timeout_seconds'
+        Value: '30'
+
+  # Redirect to SSL
+  NodesALBListener:
+    Type: 'AWS::ElasticLoadBalancingV2::Listener'
+    Properties:
+      LoadBalancerArn: !Ref NodesALB
+      Protocol: HTTP
+      Port: 80
+      DefaultActions:
+        - RedirectConfig:
+            Protocol: "HTTPS"
+            Port: "443"
+            Host: "#{host}"
+            Path: "/#{path}"
+            Query: "#{query}"
+            StatusCode: "HTTP_301"
+          Type: "redirect"
+
+  NodesHTTPSListener: # This is the HTTPS ALB Listener used to access the Jenkins Master
+    Type: AWS::ElasticLoadBalancingV2::Listener
+    Properties:
+      Certificates:
+        - CertificateArn: !Ref CertificateArn
+      DefaultActions:
+      - Type: forward
+        TargetGroupArn: !Ref NodesELBTargetGroup
+      LoadBalancerArn: !Ref NodesALB
+      Port: 443
+      Protocol: HTTPS
 
   # Alarms
   CPUTooHighAlarm:
